# lemonade

./: .gitignore  .hintrc  .pre-commit-config.yaml  AGENTS.md  BUILD_SYSTEM.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  Dockerfile  Dockerfile.alpine  LICENSE  NOTICE.md  README.md  Trust Router Design Doc.html  docker-entrypoint.sh  flake.nix  gpu_driver_check_plan.md  lemonade-app.desktop  meson.build  meson.options  mkdocs.yml  package.json  pyproject.toml  review_fixes_2698.patch  semantic_classifier_unification_rationale.md  serve_backup.py  setup.ps1  setup.py  setup.sh  tempCodeRunnerFile.py  test_thinking.py
lemonade_lean/: QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
lemonade_lean/examples/: simple_client.py
lemonade_lean/lemonade_lean/: __init__.py  cli.py  download.py  hf_cache.py  llama_wrapper.py  models.py  server.py
src/app/src-tauri/: Cargo.toml  tauri.conf.json
src/app/src-tauri/capabilities/: default.json
src/app/src-tauri/src/: beacon.rs  commands.rs  events.rs  lib.rs  main.rs  settings.rs  system_info.rs  tray_launcher.rs  webview_shim.rs
src/cpp/: BUILD_INSTRUCTIONS.md  BUILD_OPTIONS.md  CMakeLists.txt  CPackRPM.cmake  CopyElectronApp.cmake  DEVELOPER_GUIDE.md  DOCKER_GUIDE.md  IMPLEMENTATION_STATUS.md  Lemonade_Server_Installer.nsi  Lemonade_Server_Installer.nsi.in  Lemonade_Server_Installer_beta.nsi  Lemonade_Server_Installer_beta.nsi.in  Multi-Model-Spec.md  PHASE1_COMPLETION_REPORT.md  README.md  README_FIRST.md  TEST_NOW.md  ai.lemonade_server.server.plist.in  ai.lemonade_server.tray.plist.in  build_full_installer.ps1  build_installer.ps1  com.lemonade.server.plist.in  com.lemonade.tray.plist.in  config.json  install-daemon.sh.in  postinst  postinst-full  postinst-full-mac  postinst-rpm  prerm-rpm  rebuild.ps1  rebuild.sh  test_existing_cache.ps1  test_existing_cache.sh  test_model_management.ps1  test_model_management.sh
src/cpp/cli/: CMakeLists.txt  agent_config_file.cpp  agent_launcher.cpp  bench.cpp  hf_pull.cpp  lemonade_client.cpp  main.cpp  model_selection.cpp  opencode_profile.cpp  pi_profile.cpp  recipe_import.cpp  tui_launch.cpp  tui_pull.cpp  tui_run.cpp
src/cpp/include/lemon/: amdxdna_accel.h  audio_buffer.h  audio_types.h  authorization_manager.h  auto_opt_engine.h  auto_opt_manager.h  auto_opt_probes.h  auto_opt_types.h  auto_tune.h  backend_manager.h  canonical_id.h  cli_parser.h  cloud_provider_registry.h  collection_orchestrator.h  config_file.h  download_queue.h  error_types.h  experience_tools.h  gguf_capabilities.h  gguf_reader.h  gpu_exclusivity_policy.h  log_stream.h  mcp_client.h  memory_manager.h  model_manager.h  model_residency.h  model_resolution.h  model_types.h  npu_gpu_pipeline_orchestrator.h  ollama_api.h  omni_loop.h  orchestrator.h  platform.h  preset_store.h  realtime_session.h  recipe_backend_def.h  recipe_options.h  request_log_handlers.h  request_log_parser.h  request_log_service.h  (+31 more)
src/cpp/include/lemon_cli/: agent_config_file.h  agent_launcher.h  bench.h  lemonade_client.h  model_selection.h  pi_profile.h  recipe_import.h  tui_launch.h  tui_pull.h  tui_run.h
src/cpp/include/lemon_server/: server_manager.h  tray_app.h
src/cpp/include/lemon_tray/: server_manager.h  tray_app.h  tray_ui.h
src/cpp/installer/: GenerateLocaleComponents.cmake  Product-Full.wxs.in  Product.wxs.in  generate_electron_fragment.py  generate_locale_components.py  generate_ui_fragment.py  harvest_renderer.ps1
src/cpp/legacy-cli/: CMakeLists.txt  main.cpp
src/cpp/lemonade-server/: CMakeLists.txt  electron_integration.cpp  tray_app.cpp
src/cpp/lemonade-server/cli/: cli_parser.cpp
src/cpp/lemonade-server/platform/: windows_tray.cpp
src/cpp/lemonade_router/: model_download.cpp  model_manager.cpp  server.cpp
src/cpp/lemonade_router/endpoints/: inference_handlers.cpp  model_handlers.cpp  system_handlers.cpp
src/cpp/lemonade_server/: CMakeLists.txt  electron_integration.cpp  main.cpp  server_manager.cpp  tray_app.cpp
src/cpp/lemonade_server/commands/: commands.cpp
src/cpp/lemonade_server/platform/: linux_tray.cpp  macos_tray.mm  tray_factory.cpp
src/cpp/lemonade_server/tray/: tray_menu.cpp
src/cpp/resources/: architecture_defaults.json  backend_versions.json  bench_scenarios.json  bench_scenarios_embed.json  defaults.json  flm_models.json  platform_presets.json  server_models.json  vllm_model_config.json
src/cpp/resources/omni_deploy/: qwen2_5_omni_1gpu.yaml
src/cpp/resources/schemas/: README.md  collection-router.schema.json  decision.schema.json  route-decision.schema.json  route_policy.schema.json  schema-lock.json
src/cpp/resources/static/: index.html
src/cpp/server/: anthropic_api.cpp  authorization_manager.cpp  auto_opt_manager.cpp  auto_opt_probes.cpp  backend_manager.cpp  cli_parser.cpp  cloud_provider_registry.cpp  collection_orchestrator.cpp  config_file.cpp  directory_watcher.cpp  download_queue.cpp  eviction_engine.cpp  experience_tools.cpp  gpu_exclusivity_policy.cpp  hf_variants.cpp  lemonade.manifest  log_stream.cpp  logging_config.cpp  macos_system_info.mm  main.cpp  mcp_client.cpp  mcp_server.cpp  memory_manager.cpp  model_manager.cpp  model_registry.cpp  model_resolution.cpp  npu_gpu_pipeline_orchestrator.cpp  ollama_api.cpp  omni_loop.cpp  orchestrator.cpp  preset_store.cpp  prometheus_metrics.cpp  realtime_session.cpp  recipe_options.cpp  request_log_handlers.cpp  request_log_parser.cpp  request_log_service.cpp  request_registry.cpp  route_decision_response.cpp  router.cpp  (+22 more)
src/cpp/server/backends/: amdgpuserver.cpp  backend_descriptor_registry.cpp  backend_ops.cpp  backend_registry.cpp  backend_utils.cpp  chatterbox_server.cpp  cloud_descriptor.cpp  cloud_factory.cpp  cloud_server.cpp  (+33 more)
src/cpp/src/: cli_parser.cpp  main.cpp  model_manager.cpp  router.cpp  server.cpp  system_info.cpp  wrapped_server.cpp
src/cpp/tray/: CMakeLists.txt  LemonadeServiceManager.h  LemonadeServiceManager.mm  README.md  TRAY_IMPLEMENTATION_PLAN.md  agent_launcher.cpp  main.cpp  server_manager.cpp  tray_app.cpp  tray_launcher.cpp  tray_ui.cpp  version.rc
(+1621 files in other folders)
