[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemonade-lean"
version = "0.1.0"
description = "Minimal LLM server with llama.cpp Vulkan backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[project.scripts]
lemonade-server = "lemonade_lean.cli:main"

